--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -55,6 +55,7 @@ h4 {
 a {
   text-decoration: none;
   color: #262626;
+  transition: linear 0.2s;
 }
 
 
@@ -159,6 +160,21 @@ img {
 .description {
   margin: 30px 0;
 }
+
+
+
+
+
+/*---------- ----------*\
+        Production
+\*---------- ----------*/
+.production{
+  text-align: right;
+}
+ .production a:hover{
+     color: #808080;
+ }
+
 
 
 
